[package]
name = "blackjack"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "tokio", "json", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }

[lints]
workspace = true
